--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,11 @@
 main: cz.lukynka.dsf.Main
 name: disconnect-spam-fix
-version: '1.0'
-description: Removes "disconnect.spam" kick function
+version: '1.0.1'
+description: Removes "disconnect.spam" kick function from ViaVersion
 load: POSTWORLD
 author: LukynkaCZE
 website: lukynka.cz
 prefix: disconnect-spam-fix
 commands:
   disconect-spam:
-   aliases: dsf, disconect-spamfix, ds-fix
    description: Help command
